// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FeedbackBanner Complex Children 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c1 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #FFCF00;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  fill: #FFFFFF;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  background-color: #F5F5F5;
  border-left: 4px solid #FFCF00;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c5 {
  width: 100%;
}

<div
  className="c0"
  scope="module"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 92 90"
    >
      <path
        d="M46 0l46 89.3913043H0z"
      />
      <path
        className="c3"
        d="M50 63.8333333v8h-8v-8h8zm0-28v24h-8v-24h8z"
      />
    </svg>
    <div
      className="c4 c5"
    >
      <span
        className="c6"
      >
        Warning, complex child
      </span>
      <span
        className="c7"
      >
        <p>
          The message can also be structured as a more complex item than just a string
        </p>
        <p>
          For example, you can provide a Spinner 
           if you want to
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FeedbackBanner Default Usage 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c1 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  fill: #FFFFFF;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  background-color: #F5F5F5;
  border-left: 4px solid #336BFF;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c5 {
  width: 100%;
}

<div
  className="c0"
  scope="module"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 20 20"
    >
      <path
        d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
      />
      <polygon
        className="c3"
        points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
      />
    </svg>
    <div
      className="c4 c5"
    >
      <span
        className="c6"
      >
        Feedback banner
      </span>
      <span
        className="c7"
      >
        Feedback banner should be used within modules to display information that needs attention. Content is flexible, it can contain links and plain text.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FeedbackBanner Different Variant 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c5 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #FFCF00;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c20 {
  fill: #00D200;
}

.c21 {
  fill: #FFF;
}

.c15 {
  fill: #FFF;
}

.c14 {
  fill: #FF1900;
}

.c7 {
  fill: #FFFFFF;
}

.c18 {
  fill: #FFFFFF;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  background-color: #F5F5F5;
  border-left: 4px solid #336BFF;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c12 {
  background-color: #F5F5F5;
  border-left: 4px solid #FF1900;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c16 {
  background-color: #F5F5F5;
  border-left: 4px solid #FFCF00;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c19 {
  background-color: #F5F5F5;
  border-left: 4px solid #00D200;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c9 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        info
      </span>
    </div>
    <div>
      <div
        className="c4"
        scope="module"
      >
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c6"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
            />
            <polygon
              className="c7"
              points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
            />
          </svg>
          <div
            className="c8 c9"
          >
            <span
              className="c10"
            >
              Info
            </span>
            <span
              className="c11"
            >
              This is an information message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        error
      </span>
    </div>
    <div>
      <div
        className="c12"
        scope="module"
      >
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c13"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <polygon
                className="c14"
                points="16.8 0 24 7.2 24 16.8 16.8 24 7.2 24 0 16.8 0 7.2 7.2 0"
              />
              <path
                className="c15"
                d="M13,17 L13,19 L11,19 L11,17 L13,17 Z M13,5 L13,15 L11,15 L11,5 L13,5 Z"
              />
            </g>
          </svg>
          <div
            className="c8 c9"
          >
            <span
              className="c10"
            >
              Error
            </span>
            <span
              className="c11"
            >
              This is an error message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        warning
      </span>
    </div>
    <div>
      <div
        className="c16"
        scope="module"
      >
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c17"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 92 90"
          >
            <path
              d="M46 0l46 89.3913043H0z"
            />
            <path
              className="c18"
              d="M50 63.8333333v8h-8v-8h8zm0-28v24h-8v-24h8z"
            />
          </svg>
          <div
            className="c8 c9"
          >
            <span
              className="c10"
            >
              Warning
            </span>
            <span
              className="c11"
            >
              This is a warning message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        success
      </span>
    </div>
    <div>
      <div
        className="c19"
        scope="module"
      >
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c13"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                className="c20"
                d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
              />
              <path
                className="c21"
                d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
              />
            </g>
          </svg>
          <div
            className="c8 c9"
          >
            <span
              className="c10"
            >
              Success
            </span>
            <span
              className="c11"
            >
              This is a success message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FeedbackBanner Displaying Title 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c5 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  fill: #FFFFFF;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  background-color: #F5F5F5;
  border-left: 4px solid #336BFF;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c9 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        With title
      </span>
    </div>
    <div>
      <div
        className="c4"
        scope="module"
      >
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c6"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
            />
            <polygon
              className="c7"
              points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
            />
          </svg>
          <div
            className="c8 c9"
          >
            <span
              className="c10"
            >
              This is a title
            </span>
            <span
              className="c11"
            >
              This message has a title
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Without title
      </span>
    </div>
    <div>
      <div
        className="c4"
        scope="module"
      >
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c6"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
            />
            <polygon
              className="c7"
              points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
            />
          </svg>
          <div
            className="c8 c9"
          >
            <span
              className="c11"
            >
              This message does not have a title
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
